nav to stop it from creating extra margin

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,261 @@
-body {
-    background-color: rgb(120, 26, 163);
+:root {
+    --medColorOne: #640088;
+    --darkColor: #222;
+    --lightColor: #afafaf;
+    --medColorTwo: rgb(153, 42, 153);
 }
 
-header {
-    background-color:rgb(255, 252, 52);
+body {
+    background-image: linear-gradient(to right, var(--medColorOne), 4%, var(--darkColor));
+    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    color: var(--lightColor);
+    margin: 0;
 }
+
+
+header {
+    background-image: linear-gradient(to right, var(--medColorOne), var(--darkColor));
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 100px;
+}
+
+#headerTitle {
+    background-color: var(--lightColor);
+    color: var(--darkColor);
+    font-size: 15px;
+    width: 300px;
+    text-align: end;
+    padding-right: 5%;
+    position: absolute;
+    left: 0;
+}
+
+h1{
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+nav {
+   width:400px;
+   position: absolute;
+   right: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li{
+    display: inline;
+    margin-right: 5%;
+    border-bottom-style: solid;
+}
+
+li a{
+    color: var(--lightColor);
+    text-decoration: none;
+}
+
+#subtitleBanner {
+    display: flex;
+    background-image: linear-gradient(to right, var(--darkColor), 70%, var(--medColorTwo) 100%);
+    background-color: var(--medColorTwo);
+    height: 150px;
+    position: relative;
+}
+
+#profilePic {
+    position: absolute;
+    left: 4%;
+    top: 5%;
+}
+
+#subtitle {
+    background-color: var(--darkColor);
+    width: fit-content;
+    position: absolute;
+    right: 5%;
+    bottom: 10%;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+h2{
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 2%;
+}
+
+.mainSection{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.mainHeading{
+    display: flex;
+    flex: 1 1 18%;
+    justify-content:right;
+    background: none;
+    border-right-style:solid;
+    margin-top: 2%;
+}
+
+h3{
+    font-size: 200%;
+    padding-right: 10%;
+}
+
+.mainContent{
+    display: flex; 
+    flex-wrap: wrap;
+    flex: 0 0 75%;
+    margin-top: 2%;
+    margin-left: 1%;
+}
+
+.projectExample:first-child {
+    flex: 0 0 100%;
+    max-width: 820px;
+}
+
+.projectExample{
+    flex: 0 0 48%;
+    max-width: 400px;
+    flex-direction: column;
+    margin: 1%;
+    background-color: var(--medColorOne);
+    position: relative;
+}
+
+.projectExample img{
+    border-style: solid;
+    border-width: 1%;
+    border-color: var(--lightColor);
+    height: 100%;
+    width: 100%;
+    filter: grayscale(75%);
+}
+
+.projectExample img:hover{
+    filter: grayscale(0%);
+}
+
+.projectName{
+    position:absolute;
+    left:0;
+    bottom:10%;
+    padding-right:1%;
+    padding-left:1%;
+    background-color: var(--lightColor);
+}
+
+h4{
+    padding:0;
+    margin:0;
+    font-size: 150%;
+    color: var(--darkColor);
+}
+
+.main-header {
+    justify-content: space-between;
+    padding: 60px;
+    background: #13293d;
+    color: #fff;
+  }
+
+
+#contactContent{
+    align-items: center;
+}
+
+/*🔽 Responsive media queries start below here 🔽*/
+
+/*🔽 These have to do with the header and subtitle div 🔽*/
+
+@media screen and (max-width: 1000px) {
+    #headerTitle{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    h2{
+        flex-wrap: wrap;
+        max-width: 235px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    h2:before{
+        content: "Rose A. M. Hobbs ";
+        font-size: 120%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    header{
+        justify-content: right;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    nav{
+        position:static;
+    }
+}
+
+/*🔼 These (above) have to do with the header and subtitle div 🔼*/
+
+/*🔽 These (below) have to do with the main section 🔽*/
+
+@media screen and (max-width: 768px) {
+    .mainHeading{
+        display: flex;
+        flex: 1 1 100%;
+        justify-content:left;
+        border-right-style: none;
+        margin-top: 2%;
+        margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    h3{
+        border-bottom-style:solid;
+        padding-right:0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    p{
+        margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .mainContent{
+        display: flex; 
+        flex-wrap: wrap;
+        flex: 0 0 100%;
+        margin-top: 2%;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 768px) { 
+    .projectExample{
+        margin-left:0;
+        flex: 0 0 100%;
+    }
+} */
+
+/*768px and 365px are the widths at which I
+need things to change*/
